--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>Hello, pranesh!</h1>
-    <p>Welcome to your HTML document.</p>
+    <p>Welcome to your HTML .</p>
     <h2>Introduction</h2>
-    <p> I don't know !!  !!  !!</p>
+    <p> I don't</p>
 
 </body>
 </html>
