--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Hello, World!</h1>
-    <p>This is a sample HTML document.</p>
-    <h2>Subheading</h2>
+    <p>This is a sample  document.</p>
+    <h2>hb </h2>
     <p>More content goes here.</p>
     
 </body>
